bk_ida/gccida/g1/expand_eh_return
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_eh_return/src/except.c:3808:21: error: use of undeclared identifier 'machine_mode'
v0 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), 2); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_eh_return/src/obj/except.o] Error 1
